# src/application/v1.routes.js
@@ -1,10 +1,14 @@
 const express = require("express");
 const app = express.Router();
+const publicRoutes = express.Router();
+const privateRoutes = express.Router();
 
 const cookieSessionCtrl = require("./controller/cookie-session");
-const postDokterCtrl = require("./controller/postDokter");
+const authController = require("./controller/auth");
+const postDokterCtrl = require("./controller/dokter");
 const postPasienCtrl = require("./controller/postPasien");
 const checkBmiCtrl = require("./controller/checkBmi");
+
 //const auth = require("./middleware/auth");
 
 // const bagiMiddleware = (req, res, next) => {
@@ -19,26 +23,30 @@ app.get("/", function (req, res) {
   res.send({ message: "hello dari route v1" });
 });
 
-app.get("/set-cookie", cookieSessionCtrl.setCookie);
-app.get("/get-cookie", cookieSessionCtrl.getCookie);
-app.get("/set-session", cookieSessionCtrl.setSession);
-app.get("/get-session", cookieSessionCtrl.getSession);
+// app.get("/set-cookie", cookieSessionCtrl.setCookie);
+// app.get("/get-cookie", cookieSessionCtrl.getCookie);
+// app.get("/set-session", cookieSessionCtrl.setSession);
+// app.get("/get-session", cookieSessionCtrl.getSession);
+
+app.post("/register", authController.register);
+app.post("/login", authController.login);
+app.get("/logout", authController.logout);
 
 // ================= Dokter =================
-app.get("/gets-Dokter", postDokterCtrl.getPosts);
-app.post("/posts-Dokter", postDokterCtrl.addPosts);
-app.get("/getsone-Dokter/:id", postDokterCtrl.getOnePost);
-app.put("/edit-Dokter/:id", postDokterCtrl.updateOne);
-app.delete("/delete-Dokter/:id", postDokterCtrl.deleteOne);
+app.get("/dokter", postDokterCtrl.getPosts);
+app.post("/dokter", postDokterCtrl.addPosts);
+app.get("/dokter/:id", postDokterCtrl.getOnePost);
+app.put("/dokter/:id", postDokterCtrl.updateOne);
+app.delete("/dokter/:id", postDokterCtrl.deleteOne);
 // ================= Pasien =================
-app.get("/gets-Pasien", postPasienCtrl.getPosts);
-app.post("/posts-Pasien", postPasienCtrl.addPosts);
-app.get("/getsone-Pasien/:id", postPasienCtrl.getOnePost);
-app.put("/edit-Pasien/:id", postPasienCtrl.updateOne);
-app.delete("/delete-Pasien/:id", postPasienCtrl.deleteOne);
+app.get("/pasien", postPasienCtrl.getPosts);
+app.post("/pasien", postPasienCtrl.addPosts);
+app.get("/pasien/:id", postPasienCtrl.getOnePost);
+app.put("/pasien/:id", postPasienCtrl.updateOne);
+app.delete("/pasien/:id", postPasienCtrl.deleteOne);
 
 // ================= check bmi =================
-app.post("/postcheck-Bmi", checkBmiCtrl.addPosts);
+app.post("/checkBmi", checkBmiCtrl.addPosts);
 
 // header
 app.get("/get-headers", (req, res) => {
